<resources>
    <string name="app_name">QuizApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Info_Fragment_title_tv">Test your knowledge</string>
    <string name="Info_Fragment_details_tv">This application is a quiz, you will fail if you
    have three wrong answers</string>
    <string name="About_Fragment_tv">If you answer three question wrong you will fail</string>
    <string name="Start_Fragment_start_btn">Start Game</string>
    <string name="Win_Fragment_Congrats_tv">Congratulation !!</string>
    <string name="GameOver_Fragment_tv">Game Over !!</string>
    <string name="correctAnswers">Correct Answers : %s</string>
    <string name="wrongAnswers">Wrong Answers : %s</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="submit">Submit</string>
    <string name="try_again">Try Again</string>
</resources>