<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/gameover"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GameOver_Fragment_tv"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/correctTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correctAnswers"
                android:layout_margin="24dp"
                 />

            <TextView
                android:id="@+id/wrongTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrongAnswers"
                tools:layout_editor_absoluteY="490dp"
              />
            <Button
                android:id="@+id/gameOver_tryAgain_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/try_again"
                android:textSize="24sp"
                android:padding="6dp"
                />

        </LinearLayout>
    </ScrollView>
</layout>